Use symlinks so that deployments from source work more cleanly (since that's how this is most likely to be used) Apply fixes to module.xml and standalone.conf to make things work for master bundles Should only replace database IP address, not other IP addresses that point to localhost